--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatsflow-front",
-  "homepage": "https://jimmy-martin.github.io/beatsflow-front",
+  "homepage": "beatsflow.fr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
